Edit todo is not done. all other is ok

--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,22 @@
 
         <hr>
 
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form id="update-form">
+                    <label>Title:</label> <br>
+                    <input type="text" name="title" id="update-todo-title" class="m-b-10px" required> <br>
+                    <label>Description:</label> <br>
+                    <textarea type="text" name="description" id="update-todo-description" class="m-b-10px" required></textarea> <br>
+                    <input type="submit" value="Save"> <span class="p-r-10px"><input type="submit" value="Cancel"></span><br>
+                </form>
+            </div>
+
+        </div>
+
         <div id="todos-view">
 
         </div>
